Table, images, changes

--- a/bib1.bib
+++ b/bib1.bib
@@ -260,3 +260,37 @@
 	year = "2013"
 }
 
+@book{mc_methods_book,
+	abstract = "HEIDI",
+	added-at = "2009-10-26T17:15:13.000+0100",
+	address = "Weinheim",
+	author = "Kalos, Malvin H. and Whitlock, Paula A.",
+	biburl = "http://www.bibsonomy.org/bibtex/24e02db0dcc859fdf6f2dee267b1250f6/rhirsch",
+	interhash = "3847020e38ad6fa9d6b4620525bb25da",
+	intrahash = "4e02db0dcc859fdf6f2dee267b1250f6",
+	isbn = "3-527-40760-X, 978-3-527-40760-6",
+	keywords = "Monte-Carlo-Simulation",
+	language = "eng",
+	pages = "XII, 203 S.",
+	publisher = "WILEY-VCH",
+	timestamp = "2009-10-26T17:15:13.000+0100",
+	title = "{Monte Carlo methods}",
+	x-fetchedfrom = "Bibsonomy",
+	year = 2008
+}
+
+@misc{emceehammer,
+	abstract = "We introduce a stable, well tested Python implementation of the affine-invariant ensemble sampler for Markov chain Monte Carlo (MCMC) proposed by Goodman \&amp; Weare (2010). The code is open source and has already been used in several published projects in the astrophysics literature. The algorithm behind emcee has several advantages over traditional MCMC sampling methods and it has excellent performance as measured by the autocorrelation time (or function calls per independent sample). One major advantage of the algorithm is that it requires hand-tuning of only 1 or 2 parameters compared to $\sim N^2$ for a traditional algorithm in an N-dimensional parameter space. In this document, we describe the algorithm and the details of our implementation and API. Exploiting the parallelism of the ensemble method, emcee permits any user to take advantage of multiple CPU cores without extra effort. The code is available online at http://dan.iel.fm/emcee under the MIT License.",
+	archiveprefix = "arXiv",
+	author = "Foreman-Mackey, Daniel and Hogg, David W. and Lang, Dustin and Goodman, Jonathan",
+	comment = "published = 2012-02-16T20:41:19Z, updated = 2013-11-25T15:56:48Z, Code re-licensed under MIT",
+	doi = "10.1086/670067",
+	eprint = "1202.3665v4",
+	month = nov,
+	primaryclass = "astro-ph.IM",
+	title = "{emcee: The MCMC Hammer}",
+	url = "http://arxiv.org/abs/1202.3665v4; http://arxiv.org/pdf/1202.3665v4",
+	x-fetchedfrom = "arXiv.org",
+	year = "2013"
+}
+
