--- a/bib1.bib
+++ b/bib1.bib
@@ -39,7 +39,7 @@
 	comment = {published = 2005-10-03T11:58:33Z, updated = 2006-05-17T18:15:48Z, 14 pages, 6 figures; invited review presented at COSPAR Colloquium "Spectra \&amp; Timing of Compact X-ray Binaries", January 17-20, 2005, Mumbai, India. Advances in Space Research, in press},
 	doi = "10.1016/j.asr.2006.04.025",
 	eprint = "astro-ph/0510038v2",
-	journal = "Adv.SpaceRes.38:2697-2703,2006",
+	journal = "Adv.SpaceRes.38:2697-2703",
 	month = may,
 	primaryclass = "astro-ph",
 	title = "{Accretion-powered millisecond pulsars}",
@@ -95,14 +95,14 @@
 	year = "2006"
 }
 
-@article{1509.06561v2,
+@article{nattila_bayes,
 	abstract = "The cooling phase of thermonuclear (type-I) X-ray bursts can be used to constrain the neutron star (NS) compactness by comparing the observed cooling tracks of bursts to accurate theoretical atmosphere model calculations. By applying the so-called cooling tail method, where the information from the whole cooling track is used, we constrain the mass, radius, and distance for three different NSs in low-mass X-ray binaries 4U 1702-429, 4U 1724-307, and SAX J1810.8-260. Care is taken to only use the hard state bursts where it is thought that only the NS surface alone is emitting. We then utilize a Markov chain Monte Carlo algorithm within a Bayesian framework to obtain a parameterized equation of state (EoS) of cold dense matter from our initial mass and radius constraints. This allows us to set limits on various nuclear parameters and to constrain an empirical pressure-density relation for the dense matter. Our predicted EoS results in NS radius between 10.5-12.8 km (95\% confidence limits) for a mass of 1.4 $M_{\odot}$. Due to systematic errors and uncertainty in the composition these results should be interpreted as lower limits for the radius.",
 	archiveprefix = "arXiv",
-	author = "N{\~A}¤ttil{\~A}¤, J. and Steiner, A. W. and Kajava, J. J. E. and Suleimanov, V. F. and Poutanen, J.",
+	author = "N{\"a}ttil{\"a}, J. and Steiner, A. W. and Kajava, J. J. E. and Suleimanov, V. F. and Poutanen, J.",
 	comment = "published = 2015-09-22T12:09:47Z, updated = 2016-03-15T13:01:13Z, 23 pages, 12 figures, revised version, accepted for publication in A\&amp;A",
 	doi = "10.1051/0004-6361/201527416",
 	eprint = "1509.06561v2",
-	journal = "A\&amp;A 591, A25 (2016)",
+	journal = "A\&amp;A 591, A25",
 	month = mar,
 	primaryclass = "astro-ph.HE",
 	title = "{Equation of state constraints for the cold dense matter inside neutron stars using the cooling tail method}",
@@ -150,7 +150,7 @@
 	comment = "published = 2004-05-13T17:54:43Z, updated = 2004-05-13T17:54:43Z, 22 pages, 4 figures and 1 table",
 	doi = "10.1126/science.1090720",
 	eprint = "astro-ph/0405262v1",
-	journal = "Science 304:536-542,2004",
+	journal = "Science 304:536-542",
 	month = may,
 	primaryclass = "astro-ph",
 	title = "{The Physics of Neutron Stars}",
@@ -292,5 +292,88 @@
 	url = "http://arxiv.org/abs/1202.3665v4; http://arxiv.org/pdf/1202.3665v4",
 	x-fetchedfrom = "arXiv.org",
 	year = "2013"
+}
+
+@article{tolman,
+	author = "Tolman, R. C.",
+	journal = "Proceedings of the National Academy of Science, 20, 169",
+	year = "1934"
+}
+
+@article{oppenheimer,
+	author = "Oppenheimer, J. R. and Volkoff, G. M.",
+	journal = "Physical Review, 55, 374",
+	year = "1939"
+}
+
+@article{lindbland85,
+	author = "Lind, K. R. and Blandford, R. D.",
+	journal = "APJ, 295, 358-367",
+	title = "{Semidynamical models of radio jets - Relativistic beaming and source counts}",
+	year = "1985"
+}
+
+@article{metropolis53,
+	added-at = "2008-04-15T18:39:30.000+0200",
+	author = "Metropolis, N. and Rosenbluth, A. and Rosenbluth, M. and Teller, A. and Teller, E.",
+	biburl = "http://www.bibsonomy.org/bibtex/2696c7dfcbed67f0382ed02aa803817da/vittorio.loreto",
+	interhash = "b67019ed11f34441c67cc69ee5683945",
+	intrahash = "696c7dfcbed67f0382ed02aa803817da",
+	journal = "J. Chem. Phys.",
+	keywords = "1953 metropolis montecarlo rosenbluth RMP\_CFL teller",
+	pages = 1087,
+	timestamp = "2008-04-15T18:39:31.000+0200",
+	title = "{Equation of State Calculations by Fast Computing Machines}",
+	volume = 21,
+	x-fetchedfrom = "Bibsonomy",
+	year = 1953
+}
+
+@article{hastings70,
+	added-at = "2011-05-09T23:10:52.000+0200",
+	author = "Hastings, W. K.",
+	biburl = "http://www.bibsonomy.org/bibtex/206f22d1e8d42fd18723a51ac3679b607/josephausterwei",
+	interhash = "d8633f8e78c50c1d64136febae25d79d",
+	intrahash = "06f22d1e8d42fd18723a51ac3679b607",
+	journal = "Biometrika",
+	keywords = "imported",
+	pages = "97--109",
+	timestamp = "2011-05-10T10:42:42.000+0200",
+	title = "{Monte {C}arlo methods using {M}arkov chains and their applications}",
+	volume = 57,
+	x-fetchedfrom = "Bibsonomy",
+	year = 1970
+}
+
+@article{lattimer2007,
+	abstract = "We investigate how current and proposed observations of neutron stars can lead to an understanding of the state of their interiors and the key unknowns: the typical neutron star radius and the neutron star maximum mass. A theoretical analysis of neutron star structure, including general relativistic limits to mass, compactness, and spin rates is made. We consider observations made not only with photons, ranging from radio waves to X-rays, but also those involving neutrinos and gravity waves. We detail how precision determinations of structural properties would lead to significant restrictions on the poorly understood equation of state near and beyond the equilibrium density of nuclear matter.",
+	archiveprefix = "arXiv",
+	author = "Lattimer, James M. and Prakash, Maddapa",
+	comment = "published = 2006-12-15T17:22:23Z, updated = 2006-12-15T17:22:23Z, 70 pages, 19 figures, submitted to Hans Bethe Centennial Physics Reports",
+	doi = "10.1016/j.physrep.2007.02.003",
+	eprint = "astro-ph/0612440v1",
+	journal = "Phys.Rept.442:109-165",
+	month = dec,
+	primaryclass = "astro-ph",
+	title = "{Neutron Star Observations: Prognosis for Equation of State Constraints}",
+	url = "http://arxiv.org/abs/astro-ph/0612440v1; http://arxiv.org/pdf/astro-ph/0612440v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "2007"
+}
+
+@article{hebeler,
+	abstract = "We show that microscopic calculations based on chiral effective field theory interactions constrain the properties of neutron-rich matter below nuclear densities to a much higher degree than is reflected in commonly used equations of state. Combined with observed neutron star masses, our results lead to a radius R = 9.7 - 13.9 km for a 1.4 M\_{solar} star, where the theoretical range is due, in about equal amounts, to uncertainties in many-body forces and to the extrapolation to high densities.",
+	archiveprefix = "arXiv",
+	author = "Hebeler, K. and Lattimer, J. M. and Pethick, C. J. and Schwenk, A.",
+	comment = "published = 2010-07-10T22:02:28Z, updated = 2010-10-26T15:13:48Z, 4 pages, 4 figures; NORDITA-2010-45",
+	doi = "10.1103/PhysRevLett.105.161102",
+	eprint = "1007.1746v2",
+	journal = "Phys.Rev.Lett.105:161102",
+	month = oct,
+	primaryclass = "nucl-th",
+	title = "{Constraints on neutron star radii based on chiral effective field theory interactions}",
+	url = "http://arxiv.org/abs/1007.1746v2; http://arxiv.org/pdf/1007.1746v2",
+	x-fetchedfrom = "arXiv.org",
+	year = "2010"
 }
 
