--- a/mythesis.tex
+++ b/mythesis.tex
@@ -1051,35 +1051,39 @@ The results of our samplings are presented in the Figures...
 
 ..Show also weights after burn-in removal and autocorrelations?
 
-\iffalse
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
-\centerline{\epsfig{file=syntsaxpol2.pdf,width=12.0cm}}
-\caption{Posterior probability distributions of polar spot with only flat priors.
+\centerline{\epsfig{file=fpol.pdf,width=12.0cm}}
+\caption{Posterior probability distributions of the polar spot with only flat priors.
 \label{fig:polpost}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
-\centerline{\epsfig{file=syntsaxeq2.pdf,width=12.0cm}}
+\centerline{\epsfig{file=fpolpr.pdf,width=12.0cm}}
+\caption{Posterior probability distributions of the polar spot with non-uniform $i$ and $\theta$ priors.
+\label{fig:polpostpr}}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\iffalse
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\centerline{\epsfig{file=feq.pdf,width=12.0cm}}
 \caption{Posterior probability distributions of the equatorial spot with only flat priors.
 \label{fig:eqpost}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}
-\centerline{\epsfig{file=syntsaxpol2pr.pdf,width=12.0cm}}
-\caption{Posterior probability distributions of polar spot with non-uniform $i$ and $\theta$ priors.
-\label{fig:polpostpr}}
-\end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
-\centerline{\epsfig{file=syntsaxpol2.pdf,width=12.0cm}}
-\caption{Posterior probability distributions of equatorial spot with non-uniform $i$ and $\theta$ priors.
+\centerline{\epsfig{file=feqpr.pdf,width=12.0cm}}
+\caption{Posterior probability distributions of the equatorial spot with non-uniform $i$ and $\theta$ priors.
 \label{fig:eqpostpr}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
